src/main/resources/client/css/style.css
@import url(http://fonts.googleapis.com/css?family=Raleway:400,600);
@import url(http://fonts.googleapis.com/css?family=Gloria+Hallelujah);

html{
  height: 100%;
}

body {
    font-family: 'Raleway', sans-serif;
    color:#777777;
    background-color:white;
    font-size: 16px;
    height:100%;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    color: rgb(75, 75, 75);
}

.app-font {
    font-family: 'Gloria Hallelujah', cursive;
}

.ng-scope {
    height:100%;
}

.container-abs {
    display: table;
    position: absolute;
    height: 100%;
    width: 100%;
}

.container-valign-middle {
    display: table-cell;
    vertical-align: middle;
}

.container-404 {
    margin-left: auto;
    margin-right: auto; 
    min-width: 250px;
    text-align:center;
}

#wrapper {
    height:100%
    padding-left: 0;
    position: relative;
    top: 0;
}

#sidebar-wrapper {
    position: fixed;
    left: 0;
    top: 0;
    color: #fff;
    max-height: none;
    min-height: 100%;
    width: 0;
    overflow-x: hidden;
    overflow-y: auto;
    z-index:-1000;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#page-content-wrapper {
    float: right;
    position: relative;
    width: 100%;
    min-height: 100%;

    -moz-box-shadow: 10px 0px 25px 0px #656565;
    -webkit-box-shadow: 10px 0px 25px 0px #656565;
    -o-box-shadow: 10px 0px 25px 0px #656565;
    box-shadow: 10px 0px 25px 0px #656565;
    filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=90, Strength=25);

    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #page-content-wrapper {
    width: calc(100% - 250px);
}
#wrapper.toggled #sidebar-wrapper {
    width:250px;
}

.menu-collapse {
    display:inline;
    padding:0 17px;
    height:55px;
    min-height:100%;
    border-right:1px solid rgba(0,0,0,0.05);
}

@media(min-width:768px) {
    #sidebar-wrapper {
        width:250px;
    }

    #page-content-wrapper {
        width: calc(100% - 250px);
    }

    .menu-collapse {
        display:none;
    }
}

.navbar-custom {
    color:#ccc;
    min-height: 55px;
    max-height: 55px;
    border-radius:0;
    margin:0;
    border-left:none;
    border-top:none;
    border-right:none;
    background-color:rgba(230,230,230,0.3);
    box-shadow: none;
    border-bottom:1px solid rgba(230,230,230,0.5);
}

/* Sidebar Styles */
.sidebar-nav {
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #000;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #333;
    background: #f8f8f8;
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-brand {
    margin:0 0 23px 0 !important;
}



@media (min-width: 400px) {
    .container-login {
        margin:0 auto;
        width:400px;
    }
}

@media (max-width: 400px) {
    .container-login {
        margin:0 auto;
        width:96%;
    }
}



#menu-toggle {
    margin-left:2px;
    font-size:24px;
}

#menu-toggle:hover {
    cursor:default;
}

#footer {
    border-top: 1px solid #e7e7ec;
    bottom:0;
    clear: both;
    font-size: 12px;
    height: 59px;
    padding-bottom: 8px;
    padding-top: 16px;
    position: relative;
}

